--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
-    "resolutions": {
-      "styled-components": "^5"
-    },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
